# ndarray-opencv-converter

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  exemplary_program.cpp  exemplary_program.py  superlibrary.cpp  superlibrary.h
